TODO: fix unclosed InputStreams on thumbnail load

2004-12-21
- jGallery successfully tested with WebLogic Server 9.0b

2004-12-20
- added public List for parent > links 

2004-12-19
- ThumbnailWriter lookup would fail if there was a jGallery.properties in current folder
- finshed porting XP skin from singapore.sourceforge.net, this skin is done totally in JSTL

2004-12-08
- fixed some unclosed InputStreams

Version 0.9, 2004-12-03
- removed timecheck in creating thumbs
- implemented Folder.getNeighbourImages() to use in JSTL 
- ported MinimumBlue skin from singapore.sourceforge.net, this skin is done totally in JSTL 


Version 0.8.9b, 2004-11-21
- fixed NPE for selecting random image when there weren't thumbnails, yet. 

Version 0.8.9a, 2004-11-16
- some Tomcat versions seem to have problems with overloaded methods where the non-parameter version is used as a JSP EL variable, therefore renamed getIndexPage(int) to getCalculatedIndexPage(int)

Version 0.8.9, 2004-11-11
- ThumbnailWriter are instantiated by reflection and specified in web.xml
- for subfolders a random image can be used as icon (old way with folder icon can be configured with foldericon.style=icon

Version 0.8.8, 2004-09-08
- added a parameter parentlink.XXX=<link> in jGallery.properties, which generates an up-link for gallery XXX.
- if jGallery.properties is missing, use defaults

Version 0.8.7, 2004-09-05
- added URL parameter nocount=true, this prevents hit counting, useful for calling from statistics page. Added links to folders from statistics page.
- changed statistic sql to use folders left join images, so folders without image hits would be displayed, too.

Version 0.8.5, 2004-08-08
- added /Statistics page for displaying the hit counters

Version 0.8.4, 2004-07-28
- changed thumbnail generation from javax.imageio.ImageIO to com.sun.image.codec.jpeg.JPEGImageEncoder, has better quality and is vastly faster

2004-07-17
- Images would not be counted, fixed.

2004-06-16